# hermes-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  playback.fish  run.fish
configs/: defaults.toml
configs/defaults/: base.toml  cosmic-web-field.toml  cosmic-web-pm.toml  galaxy-group-pm.toml  multi-species.toml  propagating-gravity.toml  static-wave-packet.toml
docs/: 0_project-overview.md  1_particle-mesh.md  2_field-theory.md  2_pipeline.md  3_configuration.md  3_hcd-context.md  4_hcd-context.md  4_pipeline.md  5_configuration.md  5_morphis-fields.md  6_resolution-requirements.md  a_plans-for-a-unified-engine.md  b_plan-for-efficient-snapshots.md  c_plan-for-field-theory-firming-up.md  d_plans-for-gravity-as-a-propagating-field.md  e_plans-for-species-specification.md  morphis-field-brief.md
examples/: benchmark.rs  cosmic_web.rs  diagnostics.rs  diagnostics_pass2.rs  diagnostics_pass3.rs  inspect_particles.rs  measure_growth.rs  pipeline_bench.rs  playback.rs  profile_viewer.rs  run_and_save.rs  test_velocity.rs
scenes/: cosmic-web-2ft.toml  cosmic-web-ft.toml  cosmic-web-pm.toml  galaxy-group-2ft.toml  galaxy-group-ft.toml  galaxy-group-mixed.toml  galaxy-group-pm.toml  multi-species.toml  propagating-gravity.toml  static-wave-packet.toml
src/: algebra.rs  cic.rs  colormap.rs  config.rs  constants.rs  cosmology.rs  diagnostics.rs  error.rs  field.rs  grid.rs  initial.rs  integrator.rs  lib.rs  main.rs  particles.rs  poisson.rs  simulation.rs  vis.rs
src/config/: base.toml  legacy.rs  mod.rs  ontology.rs  output.rs  (+1 more)
tests/: algebra.rs  cic.rs  config.rs  cosmology.rs  diagnostics.rs  engine.rs  engine_config.rs  field.rs  field_cosmo_drift.rs  field_halo_dynamics.rs  field_particle_match.rs  grid.rs  initial.rs  integrator.rs  io.rs  particles.rs  poisson.rs  schrodinger.rs  simulation.rs  two_lump_gravity.rs  vis.rs  visuals.rs
(+74 files in other folders)
