[package]
name = "hermes-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
morphis = { git = "https://github.com/ctl-alt-leist/morphis-rs.git" }
ndarray = "0.16"
ndrustfft = "0.5"
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"

[dev-dependencies]
proptest = "1"
approx = "0.5"
