[package]
name = "hermes-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
morphis = { git = "https://github.com/ctl-alt-leist/morphis-rs.git" }
ndarray = "0.16"
ndrustfft = "0.5"
num-complex = "0.4"
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"

[features]
vis = ["dep:kiss3d", "dep:plotters", "dep:image"]

[dependencies.kiss3d]
version = "0.35"
optional = true

[dependencies.plotters]
version = "0.3"
optional = true

[dependencies.image]
version = "0.25"
optional = true

[[example]]
name = "cosmic_web"
required-features = ["vis"]

[dev-dependencies]
proptest = "1"
approx = "0.5"
